# DeepNetFramework

./: .gitignore  CMakeLists.txt  README.md  countLines.py  test_transpose.ncu-rep
include/: Op_elementwise.h  Op_map.h  Op_matmul.h  Op_reduce.h  Operators.h  Tensor.h  compute_graph.h  kernel_elementwise.h  kernel_map.h  kernel_matmul.h  kernel_reduce.h  kernel_transpose.h  kernel_utils.h  kernels.h  l1loss.h  network.h  tools_common.h  tools_cuda.h
src/: CMakeLists.txt  Op_elementwise.cu  Op_map.cu  Op_matmul.cu  Op_reduce.cu  Operators.cu  Tensor.cu  compute_graph.cu  kernel_elementwise.cu  kernel_map.cu  l1loss.cu  network.cu  tools_cuda.cu
tests/: CMakeLists.txt
tests/test_kernels/: CMakeLists.txt  main.cpp  test_matmul.cu  test_transpose.cu
tests/test_network/: CMakeLists.txt  main.cpp  test_network.cu
tests/test_tensor/: CMakeLists.txt  main.cpp  test_tensor.cu
